rust/codec-pmcoa/tests/snapshots/examples__PMC11518443.decode.losses.snap
---
source: rust/codec-pmcoap/tests/examples.rs
expression: info.losses
---
//article/front/article-meta/abstract/sec/@id: 4
//article/front/article-meta/article-categories/subj-group/subj-group: 1
//article/front/article-meta/author-notes: 1
//article/front/article-meta/contrib-group/@contrib-type: 9
//article/front/article-meta/contrib-group/@corresp: 1
//article/front/article-meta/contrib-group/aff: 18
//article/front/article-meta/contrib-group/xref: 1
//article/front/article-meta/counts: 1
//article/front/article-meta/elocation-id: 1
//article/front/article-meta/issue: 1
//article/front/article-meta/issue-title: 1
//article/front/article-meta/permissions: 1
//article/front/article-meta/pub-date/@iso-8601-date: 1
//article/front/article-meta/pub-date/@pub-type: 3
//article/front/article-meta/self-uri: 1
//article/front/journal-meta/issn: 2
//article/front/journal-meta/journal-id: 3
//article/front/journal-meta/journal-title-group: 1
//article/processing-meta: 1
