rust/codec-pmcoa/tests/snapshots/examples__PMC12354728.tar.decode.losses.snap
---
source: rust/codec-pmcoa/tests/examples.rs
expression: info.losses
---
//article/back/fn-group: 1
//article/back/notes/notes: 1
//article/back/ref-list/@id: 1
//article/body/sec/@id: 5
//article/body/sec/p/@content-type: 1
//article/body/sec/p/@id: 4
//article/body/sec/sec/@id: 9
//article/body/sec/sec/p/@id: 14
//article/body/sec/sec/p/ext-link/@ext-link-type: 1
//article/body/sec/sec/p/graphic/@id: 2
//article/body/sec/sec/p/table/tbody/tr/td/p: 546
//article/front/article-meta/abstract/@id: 1
//article/front/article-meta/abstract/p/@id: 1
//article/front/article-meta/contrib-group/@corresp: 1
//article/front/article-meta/contrib-group/address: 1
//article/front/article-meta/custom-meta-group: 1
//article/front/article-meta/elocation-id: 1
//article/front/article-meta/kwd-group/@kwd-group-type: 1
//article/front/article-meta/kwd-group/@lang: 1
//article/front/article-meta/permissions: 1
//article/front/article-meta/pub-date/@pub-type: 3
//article/front/journal-meta/issn: 1
//article/front/journal-meta/journal-id: 2
//article/processing-meta: 1
