rust/codec-pmcoa/tests/snapshots/examples__PMC12431436.tar.decode.losses.snap
---
source: rust/codec-pmcoa/tests/examples.rs
expression: info.losses
---
//article/back/ref-list/ref/@publication-type: 35
//article/body/sec/@id: 6
//article/body/sec/p/italic/@toggle: 9
//article/body/sec/sec/@id: 14
//article/body/sec/sec/fig/@position: 4
//article/body/sec/sec/fig/graphic/@position: 4
//article/body/sec/sec/fig/object-id: 4
//article/body/sec/sec/p/ext-link/@ext-link-type: 2
//article/body/sec/sec/p/italic/@toggle: 8
//article/body/sec/sec/table-wrap/@position: 4
//article/body/sec/sec/table-wrap/graphic/@id: 4
//article/body/sec/sec/table-wrap/graphic/@position: 4
//article/body/sec/sec/table-wrap/table-wrap-foot/fn/@id: 4
//article/body/sec/supplementary-material/@content-type: 3
//article/body/sec/supplementary-material/@position: 3
//article/front/article-meta/abstract/p/italic/@toggle: 3
//article/front/article-meta/aff: 7
//article/front/article-meta/article-categories/subj-group/subj-group: 19
//article/front/article-meta/author-notes: 1
//article/front/article-meta/contrib-group/@contrib-type: 15
//article/front/article-meta/contrib-group/@corresp: 2
//article/front/article-meta/contrib-group/role: 32
//article/front/article-meta/contrib-group/xref: 2
//article/front/article-meta/counts: 1
//article/front/article-meta/custom-meta-group: 1
//article/front/article-meta/elocation-id: 1
//article/front/article-meta/issue: 1
//article/front/article-meta/permissions: 1
//article/front/article-meta/pub-date/@pub-type: 2
//article/front/article-meta/self-uri: 1
//article/front/article-meta/title-group/italic/@toggle: 1
//article/front/journal-meta/issn: 1
//article/front/journal-meta/journal-id: 3
//article/front/journal-meta/journal-title-group: 1
//article/front/notes: 1
//article/processing-meta: 1
